Resolve issue with menu bar due to govuk-frontend-5.7.§.min.js not rendering js. Change Text to lower case. Add service navigation.

--- a/admin/templates/base.html
+++ b/admin/templates/base.html
@@ -35,12 +35,12 @@
 
 <body class="govuk-template__body">
     <script>
-        document.body.className = document.body.className ? document.body.className + ' js-enabled' : 'js-enabled'
+        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
     </script>
 
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link" >Skip to main content</a>
 
-    <header class="govuk-header" role="banner" data-module="govuk-header">
+    <header class="govuk-header govuk-header--full-width-border" role="banner" data-module="govuk-header">
         <div class="govuk-header__container govuk-width-container">
             <div class="govuk-header__logo">
                 <a href="https://www.gov.uk" class="govuk-header__link govuk-header__link--homepage">
@@ -62,60 +62,64 @@
                 <a href="/" class="govuk-header__link govuk-header__service-name">
                     Download GRC applications
                 </a>
-                <nav aria-label="Menu" class="govuk-header__navigation">
-                    <button type="button" class="govuk-header__menu-button govuk-js-header-toggle"
-                            aria-controls="navigation" aria-label="Show or hide menu">
-                        Menu
-                    </button>
-
-                    <ul id="navigation" class="govuk-header__navigation-list">
-                        {% if 'signedIn' not in session %}
-                            <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-                                <a href="/" class="govuk-header__link">
-                                    Sign in
-                                </a>
-                            </li>
-                        {% else %}
-                            <li class="govuk-header__navigation-item">
-                                <span class="govuk-visually-hidden">
-                                </span>
-                                    Signed in as
-                                {{ session['signedIn'] }}
-                            </li>
-                            {% if session['userType'] == 'ADMIN' %}
-                                <li class="govuk-header__navigation-item">
-                                    <a href="{{ url_for('users.index') }}" class="govuk-header__link">
-                                        Manage users
-                                    </a>
-                                </li>
-                            {% endif %}
-                            <li class="govuk-header__navigation-item">
-                                <a href="{{ url_for('tools.index') }}" class="govuk-header__link">
-                                    Tools
-                                </a>
-                            </li>
-                            <li class="govuk-header__navigation-item">
-                                <a href="{{ url_for('password_reset.index') }}" class="govuk-header__link">
-                                    Reset password
-                                </a>
-                            </li>
-                            <li class="govuk-header__navigation-item">
-                                <a href="{{ url_for('signout.index') }}" class="govuk-header__link">
-                                    Sign out
-                                </a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                </nav>
             </div>
         </div>
     </header>
+    <div class="govuk-service-navigation" data-module="govuk-service-navigation">
+      <div class="govuk-width-container">
+        <div class="govuk-service-navigation__container">
+          <nav aria-label="Menu" class="govuk-service-navigation__wrapper">
+            <button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden>
+              Menu
+            </button>
+            <ul class="govuk-service-navigation__list" id="navigation">
+                {% if 'signedIn' not in session %}
+                    <li class="govuk-service-navigation__item">
+                        <a href="/" class="govuk-service-navigation__link">
+                            Sign in
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="govuk-service-navigation__item">
+                        <span class="govuk-service-navigation__link">
+                        </span>
+                            Signed in as
+                        {{ session['signedIn'] }}
+                    </li>
+                    {% if session['userType'] == 'ADMIN' %}
+                        <li class="govuk-service-navigation__item">
+                            <a href="{{ url_for('users.index') }}" class="govuk-service-navigation__link">
+                                Manage users
+                            </a>
+                        </li>
+                    {% endif %}
+                    <li class="govuk-service-navigation__item">
+                        <a href="{{ url_for('tools.index') }}" class="govuk-service-navigation__link">
+                            Tools
+                        </a>
+                    </li>
+                    <li class="govuk-service-navigation__item">
+                        <a href="{{ url_for('password_reset.index') }}" class="govuk-service-navigation__link">
+                            Reset password
+                        </a>
+                    </li>
+                    <li class="govuk-service-navigation__item">
+                        <a href="{{ url_for('signout.index') }}" class="govuk-service-navigation__link">
+                            Sign out
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
 
     <div class="govuk-width-container">
         <div class="govuk-phase-banner">
             <p class="govuk-phase-banner__content">
                 <strong class="govuk-tag govuk-phase-banner__content__tag">
-                    beta
+                    Beta
                 </strong>
                 <span class="govuk-phase-banner__text">
                     This is a new service.
@@ -202,9 +206,9 @@
         </div>
     </footer>
 
-    <script src="{{ url_for('static', filename='assets/govuk-frontend-5.7.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/govuk-frontend.min.js') }}"></script>
     <script type="module">
-      import { initAll } from '{path-to-javascript}/govuk-frontend.min.js'
+      import { initAll } from '../static/assets/govuk-frontend.min.js'
       initAll()
     </script>
     {% block js %}{% endblock %}
