--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -35,7 +35,7 @@
 
 <body class="govuk-template__body">
     <script>
-        document.body.className = document.body.className ? document.body.className + ' js-enabled' : 'js-enabled'
+        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
     </script>
 
     <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
@@ -70,7 +70,7 @@
         <div class="govuk-phase-banner">
             <p class="govuk-phase-banner__content">
                 <strong class="govuk-tag govuk-phase-banner__content__tag">
-                    beta
+                    Beta
                 </strong>
                 <span class="govuk-phase-banner__text">
                     This is a new service.
@@ -157,9 +157,9 @@
         </div>
     </footer>
 
-    <script src="{{ url_for('static', filename='assets/govuk-frontend-5.7.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/govuk-frontend.min.js') }}"></script>
     <script type="module">
-      import { initAll } from '{path-to-javascript}/govuk-frontend.min.js'
+      import { initAll } from '../static/assets/govuk-frontend.min.js'
       initAll()
     </script>
 </body>
