--- a/grc/templates/base.html
+++ b/grc/templates/base.html
@@ -79,7 +79,7 @@
             <p class="govuk-phase-banner__content govuk-!-width-full">
                 <span class="govuk-phase-banner__text">
                     <strong class="govuk-tag govuk-phase-banner__content__tag">
-                        beta
+                        Beta
                     </strong>
                     This is a new service - your
                     <a href="{{ url_for('feedback.feedback_page') }}" class="govuk-link">
@@ -193,14 +193,14 @@
         </div>
     </footer>
 
-    <script src="{{ url_for('static', filename='assets/govuk-frontend-5.7.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/govuk-frontend.min.js') }}"></script>
     <script>
         window.TRACKING_PREVIEW_ID = '09GCMPLXM8';
         window.TRACKING_LIVE_ID = '09GCMPLXM8';
     </script>
     <script src="{{ url_for('static', filename='application.js') }}"></script>
     <script type="module">
-        import { initAll } from '{path-to-javascript}/govuk-frontend.min.js'
+        import { initAll } from '../static/assets/govuk-frontend.min.js'
         initAll()
     </script>
 </body>
