--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -109,6 +109,16 @@
                                                         </span>
                                                     </a>
                                                 </li>
+                                                <li>
+                                                    <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+                                                        <div class="govuk-checkboxes__item">
+                                                            <input class="govuk-checkboxes__input" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" onchange="handleNewCaseCheckbox()">
+                                                            <label class="govuk-label govuk-checkboxes__label" for="{{ application.reference_number }}">
+                                                                Register new case
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </li>
                                             </ul>
                                         </td>
                                     </tr>
@@ -123,6 +133,19 @@
                                     </tr>
                                     {% endif %}
                                 {% endfor %}
+                                <tr class="govuk-table__row">
+                                    <td colspan="4" class="govuk-table__cell" style="text-align: right">
+                                        <button id="submit-selected-apps-btn-new" disabled="disabled" class="govuk-button govuk-!-margin-bottom-0 govuk-button--disabled" data-module="govuk-button">
+                                            Apply new case registration
+                                        </button>
+                                        <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="selectAllCases()">
+                                            Select all for new case registration
+                                        </button>
+                                        <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="clearAllCases()">
+                                            Clear all for new case registration
+                                        </button>
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
                     {% endif %}
