add a mock api to simulate the glimr api

--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -135,7 +135,10 @@
                                 {% endfor %}
                                 <tr class="govuk-table__row">
                                     <td colspan="4" class="govuk-table__cell" style="text-align: right">
-                                        <button id="submit-selected-apps-btn-new" disabled="disabled" class="govuk-button govuk-!-margin-bottom-0 govuk-button--disabled" data-module="govuk-button">
+                                        <button id="submit-selected-apps-btn-new" disabled="disabled" 
+                                                class="govuk-button govuk-!-margin-bottom-0 govuk-button--disabled" 
+                                                data-module="govuk-button"
+                                                onclick="submitNewCaseRegistration()">
                                             Apply new case registration
                                         </button>
                                         <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="selectAllCases()">
