add some more fields to the request - contact plan, title, etc

--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -91,7 +91,7 @@
                                             {{ application_data.personal_details_data.middle_names_or_empty_string }}
                                             <span style="text-decoration: underline;">{{ application_data.personal_details_data.last_name }}</span>
                                         </td>
-                                        <td class="govuk-table__cell">
+                                        <td class="govuk-table__cell" id="grc-application-submitted-date">
                                             {{ application.updated | format_date }}
                                         </td>
                                         <td class="govuk-table__cell">
