--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -112,10 +112,17 @@
                                                 <li>
                                                     <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
                                                         <div class="govuk-checkboxes__item">
-                                                            <input class="govuk-checkboxes__input" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" onchange="handleNewCaseCheckbox()">
-                                                            <label class="govuk-label govuk-checkboxes__label" for="{{ application.reference_number }}">
-                                                                Register new case
-                                                            </label>
+                                                            {% if application.case_registered == True %}
+                                                                <input class="govuk-checkboxes__input checkbox-registered" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" checked disabled>
+                                                                <label class="govuk-label govuk-checkboxes__label" for="{{ application.reference_number }}">
+                                                                    Registered new case
+                                                                </label>
+                                                            {% else %}
+                                                                <input class="govuk-checkboxes__input checkbox-unregistered" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" onchange="handleNewCaseCheckbox()">
+                                                                <label class="govuk-label govuk-checkboxes__label" for="{{ application.reference_number }}">
+                                                                    Register new case
+                                                                </label>
+                                                            {% endif %}
                                                         </div>
                                                     </div>
                                                 </li>
