Create GLiMR API client on the backend. Create temporary Javascript to call it

--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -60,7 +60,7 @@
                 </ul>
 
 
-                <div class="govuk-tabs__panel" id="new" role="tabpanel" aria-labelledby="tab_new"">
+                <div class="govuk-tabs__panel" id="new" role="tabpanel" aria-labelledby="tab_new">
                     <h2 class="govuk-heading-m">New applications</h2>
                     {% if newApplications.count() == 0 %}
                         <div class="govuk-body">
@@ -145,7 +145,7 @@
                                         <button id="submit-selected-apps-btn-new" disabled="disabled" 
                                                 class="govuk-button govuk-!-margin-bottom-0 govuk-button--disabled" 
                                                 data-module="govuk-button"
-                                                onclick="submitNewCaseRegistration()">
+                                                onclick="submitNewCaseRegistrationTest()">
                                             Apply new case registration
                                         </button>
                                         <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="selectAllCases()">
