--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -43,7 +43,7 @@
             <div class="govuk-tabs" data-module="govuk-tabs">
                 <ul class="govuk-tabs__list" role="tablist">
                     <li class="govuk-tabs__list-item govuk-tabs__list-item--selected" role="presentation">
-                        <a class="govuk-tabs__tab" href="#new" id="tab_new" role="tab" aria-controls="new" aria-selected="true" tabindex="0" onclick="tabClicked(this.id, null)">
+                        <a class="govuk-tabs__tab" href="#new" id="tab_new" role="tab" aria-controls="new" aria-selected="true" tabindex="0" onclick="tabClicked(this.id, {{ new_apps_references }})">
                             New applications
                         </a>
                     </li>
@@ -118,7 +118,7 @@
                                                                     Registered new case
                                                                 </label>
                                                             {% else %}
-                                                                <input class="govuk-checkboxes__input checkbox-unregistered" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" onchange="handleNewCaseCheckbox()">
+                                                                <input class="govuk-checkboxes__input checkbox-unregistered" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" onclick="selectOrDeselectApplication('{{ application.reference_number }}')">
                                                                 <label class="govuk-label govuk-checkboxes__label" id="label-{{ application.reference_number }}" for="{{ application.reference_number }}">
                                                                     Register new case
                                                                 </label>
@@ -148,10 +148,10 @@
                                                 onclick="submitNewCaseRegistration()">
                                             Apply new case registration
                                         </button>
-                                        <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="selectAllCases()">
+                                        <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="selectAllApplications({{ new_apps_references }})">
                                             Select all for new case registration
                                         </button>
-                                        <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="clearAllCases()">
+                                        <button class="govuk-button govuk-!-margin-bottom-0 govuk-button--secondary" data-module="govuk-button" onclick="clearAllApplications({{ new_apps_references }})">
                                             Clear all for new case registration
                                         </button>
                                     </td>
