--- a/admin/templates/applications/applications.html
+++ b/admin/templates/applications/applications.html
@@ -81,9 +81,8 @@
                                     {% set application_data = application.application_data() %}
                                     {% if application_data %}
                                     <tr class="govuk-table__row">
-                                        <th scope="row" class="govuk-table__header">
+                                        <th scope="row" class="govuk-table__header reference-number">
                                             {{ application_data.reference_number_formatted }}
-                                            <!--- {{ application.user_input | safe }} -->
                                         </th>
                                         <td class="govuk-table__cell">
                                             {{ application_data.personal_details_data.title }}
@@ -91,7 +90,7 @@
                                             {{ application_data.personal_details_data.middle_names_or_empty_string }}
                                             <span style="text-decoration: underline;">{{ application_data.personal_details_data.last_name }}</span>
                                         </td>
-                                        <td class="govuk-table__cell" id="grc-application-submitted-date">
+                                        <td class="govuk-table__cell">
                                             {{ application.updated | format_date }}
                                         </td>
                                         <td class="govuk-table__cell">
@@ -114,12 +113,12 @@
                                                         <div class="govuk-checkboxes__item">
                                                             {% if application.case_registered == True %}
                                                                 <input class="govuk-checkboxes__input checkbox-registered" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" checked disabled>
-                                                                <label class="govuk-label govuk-checkboxes__label" id="label-{{ application.reference_number }}" for="{{ application.reference_number }}">
+                                                                <label class="govuk-label govuk-checkboxes__label" id="label-{{ application.reference_number }}" name="label-{{ application.reference_number }}" for="{{ application.reference_number }}">
                                                                     Registered new case
                                                                 </label>
                                                             {% else %}
                                                                 <input class="govuk-checkboxes__input checkbox-unregistered" id="{{ application.reference_number }}" name="{{ application.reference_number }}" type="checkbox" onclick="selectOrDeselectApplication('{{ application.reference_number }}')">
-                                                                <label class="govuk-label govuk-checkboxes__label" id="label-{{ application.reference_number }}" for="{{ application.reference_number }}">
+                                                                <label class="govuk-label govuk-checkboxes__label" id="label-{{ application.reference_number }}" name="label-{{ application.reference_number }}" for="{{ application.reference_number }}">
                                                                     Register new case
                                                                 </label>
                                                             {% endif %}
