Solve accessibility failures

--- a/admin/templates/applications/applications-error.html
+++ b/admin/templates/applications/applications-error.html
@@ -7,12 +7,12 @@
         <div class="govuk-error-summary__body">
             <ul class="govuk-list govuk-error-summary__list">
                 <li>
-                    <a href="#new">
+                    <a href="#tab_new">
                         One or more cases could not be automatically registered
                     </a>
                 </li>
                 <li>
-                    <a href="#new">
+                    <a href="#tab_new">
                         Please try again or register the case manually to GLiMR
                     </a>
                 </li>
