--- a/grc/templates/one-login/auth.html
+++ b/grc/templates/one-login/auth.html
@@ -4,7 +4,5 @@
 
 {% block content %}
     <h1 class="govuk-heading-l">Welcome to GOV.UK One Login Test</h1>
-    <p class="govuk-body">Please choose an action:</p>
-    <button class="govuk-button govuk-!-margin-bottom-0" onclick="window.location.href='/onelogin/authenticate'">Authenticate Only</button>
-    <button class="govuk-button govuk-!-margin-bottom-0" onclick="window.location.href='/onelogin/identify'">Prove Identity</button>
+    <button class="govuk-button govuk-!-margin-bottom-0" onclick="window.location.href='/onelogin/authenticate'">Authenticate</button>
 {% endblock %}
