--- a/grc/templates/start-application/reference-number.html
+++ b/grc/templates/start-application/reference-number.html
@@ -4,7 +4,7 @@
 {% block title %}{{ _('Your reference number') }}{% endblock %}
 
 {% block backLink %}
-    {{ back.renderFor('startApplication.backToIsFirstVisit') }}
+    {{ back.renderFor('oneLogin.identityEligibility') }}
 {% endblock %}
 
 {% block content %}
