--- a/grc/templates/one-login/start.html
+++ b/grc/templates/one-login/start.html
@@ -11,25 +11,50 @@
         <div class="govuk-grid-column-two-thirds">
             {{ error_summary.renderFor(form) }}
 
-            <form method="POST">
-                {{ form.csrf_token }}
+            <h1 class="govuk-heading-l">
+                {{ _('Have you already started an application?') }}
+            </h1>
 
+            <p class="govuk-body">
+                {{ _('If this is your first time using this service, we will give you a reference number') }}.
+                {{ _('You will need this if you return to your application') }}.
+            </p>
+            <p class="govuk-body">
+                {{ _('If you are returning to your application, you will need your application reference number') }}.
+                {{ _('If you have lost or forgotten it, you can start a new application') }}.
+            </p>
+
+            <div class="govuk-inset-text">
+                {{ _('Before you start, make sure you have read the guidance on') }}
+                <a href="https://www.gov.uk/apply-gender-recognition-certificate" target="_blank" class="govuk-link">
+                    {{ _('applying for a Gender Recognition Certificate (opens in a new tab)') }}
+                </a>.
+            </div>
+
+            <form method="POST">
+                {{ form.hidden_tag() }}
+
+                {% macro lostReferenceHtmlBlock() %}
+                    <p class="govuk-hint">
+                        {{ _('You will need to start a new application') }}
+                    </p>
+                {% endmacro %}
                 {{ radios.renderFor(
                     form,
                     fieldName='has_reference',
-                    question=_("Have you already started an application?"),
                     radiosOptions={
                         'questionIsPageHeading': true,
                         'conditionalOptions': [
-                            ('yes',
+                            ('HAS_REFERENCE',
                             textInput.renderFor(
                                 form,
                                 fieldName='reference',
                                 textInputForOptions={
-                                    'labelOptions': { 'htmlOrText': _('What is your reference number?') },
-                                    'classes': 'govuk-input--width-20'
+                                    'labelOptions': { 'htmlOrText': _('Reference number') },
+                                    'classes': 'govuk-input--width-10'
                                 }
-                            ))
+                            )),
+                            ('LOST_REFERENCE', lostReferenceHtmlBlock())
                         ]
                     }
                 ) }}
